--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.15",
+    "axios": "^1.3.4",
+    "element-plus": "^2.2.35",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.1.6",
+    "vue3-video-play": "^1.3.1-beta.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.43.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "vite": "^4.1.4"
   }
